# tseda

./: .env  .gitignore  DESIGN_HISTORY.md  README.md  change_point_detector.ipynb  fft_synthetic.ipynb  launch_tseda  main.py  pyproject.toml  rajiv_github_key  rajiv_github_key.pub  requirements.txt  sample_eval.ipynb  sample_series_gen.ipynb  tseda_infographic.md  window_size_reformat.ipynb
.ipynb_checkpoints/: periodicity_cp_test-checkpoint.ipynb  sample_eval-checkpoint.ipynb  sample_series_gen-checkpoint.ipynb  ssa-checkpoint.ipynb  window_size_reformat-checkpoint.ipynb
data/: coffee_prices.csv  customer_purchase_rate_microsoft_ds.csv  formatted_export.txt  generated_biomass_MW_series.csv  hyndman_arrivals_quarterly_japan.csv  hyndman_goog_daily_close.csv  hyndman_hyndsight_daily_pageviews.csv  hyndman_sunspot_monthly_area.csv  hyndman_usconsumption_quarterly_consumption.csv  segmented_series _coffee.csv  segmented_series _synthetic.csv  segmented_series_carsales.csv  segmented_series_energy.csv  segmented_series_white_noise.csv  synthetic_series.csv  ticket_resolution_hourly_nyc311.csv  trimmed_biomass - generated_biomass_MW_series.csv  uci_air_quality_hourly_co.csv  uci_sales_dataset.csv  white_noise_data.csv
data/.adk/: session.db
data/kmds/: biomass_power_analysis.xml  car_sales_analysis.xml  coffee_analysis_kb.xml  coffee_prices_analysis.xml  coffee_prices_analysis_report.txt  coffee_prices_kb.xml  coffee_prices_kb_gemini_assisted.  export.txt
data/prompts/: coffee_series_prompts.txt
docs/: Makefile  description_prompt.txt  how_to_build_publish.md  make.bat  requirements.txt  tseda_infographic.md  tutorial.md  user_guide.md
docs/source/: conf.py  index.rst  installation.rst  overview.rst  workflow.rst
high_level_reports/: BUSINESS_VALUE_SUMMARY.md
prompts/: dash_app.txt
src/change_point/: change_point_estimator.py
src/config/: prompts_config.csv
src/data_writers/: kmds_writer.py
src/dataloader/: coffee_prices_data_loader.py  kmds_data_loader.py  synthetic_series_data_loader.py
src/decomposition/: ssa_decomposition.py
src/series_stats/: summary_statistics.py
src/tseda/: __init__.py  __main__.py  bump_version.py  notebook_api.py
src/tseda.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tseda/change_point/: change_point_estimator.py
src/tseda/config/: config_loader.py  tseda_config.yaml
src/tseda/data_writers/: kmds_writer.py
src/tseda/dataloader/: coffee_prices_data_loader.py  hyndman_examples_data_loader.py  kaggle_data_loader.py  kmds_data_loader.py  local_dataloader.py  synthetic_series_data_loader.py  ticket_resolution_data_loader.py  uci_air_quality_data_loader.py  white_noise_data_loader.py
src/tseda/decomposition/: automatic_grouping_heuristic.py  ssa_decomposition.py  ssa_result_summary.py
src/tseda/periodicity/: fft_analyzer.py
src/tseda/series_stats/: sampling_prop.py  (+1 more)
src/user_interface/: .gitignore  gemini_chat.py  global_analysis.py  kmds_capture.py  segment_analysis.py  ts_analyze_ui.py
src/visualization/: autocorrelation_vis.py  series_kde_visualizer.py
tests/: test_autocorrelation_vis.py  test_change_point_estimator.py  test_fft_analyzer.py  test_notebook_api.py  test_sampling_prop.py  test_series_histogram_visualizer.py  test_series_kde_visualizer.py  test_ssa_decomposition.py  test_ssa_result_summary.py  test_ts_analyze_ui.py
(+17 files in other folders)
