[project]
name = "tseda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.6",
    "ipython>=9.8.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "req>=1.0.0",
    "ruptures>=1.1.10",
    "scikit-learn>=1.8.0",
    "scipy<1.16.0",
    "seaborn>=0.13.2",
    "ssalib>=0.1.3",
    "statsmodels>=0.14.6",
    "streamlit>=1.52.2",
]
[tool.hatch.build.targets.sdist]
include = [
    "src/user_interface/prompts_config.csv"
]
