[project]
name = "tseda"
version = "2.1.0"
description = "A package for exploration of regularly sampled time series."
readme = "README.md"
requires-python = ">=3.13"
license = "LicenseRef-Proprietary"
keywords = ["time-series", "ssa", "dash", "analytics", "decomposition"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "dash>=4.1.0",
  "dash-ag-grid>=31.3.1",
    "dash-bootstrap-components>=2.0.4",
    "google-genai>=1.56.0",
    "importlib-resources>=6.5.2",
    "ipython>=9.8.0",
    "jupyter>=1.1.1",
    "jupyter-ai>=2.31.7",
    "jupyter-dash>=0.4.2",
    "kaggle>=2.0.0",
    "kdepy>=1.1.12",
    "kmds>=0.3.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "python-dotenv>=1.2.1",
    "req>=1.0.0",
    "ruptures>=1.1.10",
    "scikit-learn>=1.8.0",
    "scipy<1.16.0",
    "seaborn>=0.13.2",
    "skrub>=0.7.2",
    "ssalib>=0.1.3",
    "statsmodels>=0.14.6",
    "streamlit>=1.52.2",
]

  [project.optional-dependencies]
  dev = [
    "pytest>=8.0",
    "pytest-cov>=7.0.0",
  ]
  docs = [
    "sphinx>=8.0",
    "furo>=2024.8.6",
    "myst-parser>=3.0",
    "sphinx-copybutton>=0.5",
  ]

  [project.scripts]
  tseda = "tseda.user_interface.ts_analyze_ui:main"
  bump-version = "tseda.bump_version:main"

  [build-system]
  requires = ["setuptools>=68", "wheel"]
  build-backend = "setuptools.build_meta"


  [tool.setuptools.packages.find]
  where = ["src"]
  include = ["tseda*"]

  [tool.setuptools.package-data]
  tseda = [
    "config/*.csv",
    "images/*",
  ]
